# payment_bot

./: .gitignore  .test.env  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  webhook.py
alembic/: env.py
alembic/versions/: 9ef4edc6c131_add_referal.py  a03eaf844861_initial_revision.py  fd9dc718a068_initial_revision.py
locales/en/LC_MESSAGES/: messages.ftl
locales/ru/LC_MESSAGES/: messages.ftl
src/: app.py  handlers.py  keyboards.py  utils.py
src/core/: app.py  buttons.py  db_dependecy.py  db_dependency.py  message.py  settings.py  state.py
src/cruds/: payment_crud.py  subscription_crud.py  user_crud.py
src/database/: __init__.py  base_model.py  enums.py  models.py
src/filters/: admin.py
src/handlers/: __init__.py  start.py  subscription.py  users.py
src/handlers/user/: payments.py  profile.py  referral.py  start.py  subscription.py
src/keyboards/: common_kb.py  payments_kb.py  profile_kb.py  referral_kb.py  subscription_kb.py  users_kb.py
src/locales/en/LC_MESSAGES/: messages.ftl
src/locales/ru/LC_MESSAGES/: messages.ftl
src/middleware/: __init__.py  db_session.py  i18n_middleware.py
src/service/: cryptopay.py  utils.py  yoomoney_api.py
tests/: conftest.py
tests/user_handlers/: test_change_language.py  test_language.py  test_profile.py  test_start.py  test_support.py  test_tariff.py
tests/utils/: for_test.py  mocked_bot.py  updates.py
